--- a/tienda/templates/tienda/bodeguero_ordenes.html
+++ b/tienda/templates/tienda/bodeguero_ordenes.html
@@ -7,7 +7,7 @@
         <div class="col-lg-3 mb-4">
             <div class="admin-nav">
                 <div class="p-4 border-bottom">
-                    <h5 class="m-0">Panel de Administrador</h5>
+                    <h5 class="m-0">Panel de Bodeguero</h5>
                     <small class="text-muted">Bienvenido, {{ request.user.username }}!</small>
                 </div>
                 <div class="list-group list-group-flush">
@@ -16,9 +16,6 @@
                     </a>
                     <a href="{% url 'admin_ordenes' %}" class="list-group-item list-group-item-action active">
                         <i class="fas fa-shopping-cart me-2"></i> Pedidos
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <i class="fas fa-users me-2"></i> Usuarios
                     </a>
                     
                 </div>
