--- a/tienda/templates/tienda/login.html
+++ b/tienda/templates/tienda/login.html
@@ -39,7 +39,7 @@
                 </form>
                                
                 <div class="register-link">
-                    ¿No tienes una cuenta? <a href="#">Regístrate aquí</a>
+                    ¿No tienes una cuenta? <a href="{% url 'registro' %}">Regístrate aquí</a>
                 </div>
             </div>
         </div>
